[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/objects/Player_icons/visibility_2.png" type="Texture" id=2]
[ext_resource path="res://sprites/objects/Player_icons/arrow_0.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/ghost_07.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/ghost_08.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/ghost_09.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/ghost_00.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/ghost_01.png" type="Texture" id=8]
[ext_resource path="res://sprites/player/ghost_02.png" type="Texture" id=9]
[ext_resource path="res://sprites/player/ghost_03.png" type="Texture" id=10]
[ext_resource path="res://sprites/player/ghost_13.png" type="Texture" id=11]
[ext_resource path="res://sprites/player/ghost_14.png" type="Texture" id=12]
[ext_resource path="res://sprites/player/ghost_15.png" type="Texture" id=13]
[ext_resource path="res://sprites/player/ghost_16.png" type="Texture" id=14]
[ext_resource path="res://sprites/player/ghost_17.png" type="Texture" id=15]
[ext_resource path="res://sprites/player/ghost_10.png" type="Texture" id=16]
[ext_resource path="res://sprites/player/ghost_11.png" type="Texture" id=17]
[ext_resource path="res://sprites/player/ghost_04.png" type="Texture" id=18]
[ext_resource path="res://sprites/player/ghost_06.png" type="Texture" id=19]
[ext_resource path="res://sprites/player/ghost_05.png" type="Texture" id=20]
[ext_resource path="res://sprites/player/ghost_18.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "blend",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "focus",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "vanish",
"speed": 15.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 17 ) ],
"loop": false,
"name": "leap",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": false,
"name": "appear",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 8, 16 )

[sub_resource type="OccluderPolygon2D" id=3]

closed = true
cull_mode = 0
polygon = PoolVector2Array( -1, -15, 2, -15, 3, -14, 3, -7, 6, -2, 6, 13, 5, 16, -6, 16, -7, 14, -7, 7, -6, 0, -3, -8, -6, -9, -4, -12 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 3.76471 )

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Z Index" ]

[node name="Visibility" type="Sprite" parent="." index="0"]

position = Vector2( 0, -25 )
texture = ExtResource( 2 )

[node name="Arrow" type="Sprite" parent="." index="1"]

position = Vector2( 0, -24 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]

frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true
_sections_unfolded = [ "Z Index" ]

[node name="PlayerCollider" type="CollisionShape2D" parent="." index="3"]

position = Vector2( -0.5, 0 )
scale = Vector2( 0.954545, 1 )
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="." index="4"]

light_mask = 3
occluder = SubResource( 3 )
light_mask = 3
_sections_unfolded = [ "Z Index" ]

[node name="Camera2D" type="Camera2D" parent="." index="5"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 20.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Limit", "Smoothing" ]

[node name="ColliderR" type="Area2D" parent="." index="6"]

position = Vector2( 11, 7 )
scale = Vector2( 0.09375, 0.265625 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 1025
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColliderR" index="0"]

position = Vector2( -21.3333, 1.90735e-06 )
shape = SubResource( 4 )

[node name="ColliderL" type="Area2D" parent="." index="7"]

editor/display_folded = true
position = Vector2( -12, 7 )
scale = Vector2( 0.09375, 0.265625 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 1025
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColliderL" index="0"]

position = Vector2( 21.3333, 0 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="Debug" type="Label" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -43.0
margin_top = -46.0
margin_right = -22.0
margin_bottom = -24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_constants", "custom_fonts", "custom_styles" ]

[connection signal="body_entered" from="ColliderR" to="." method="_on_ColliderR_body_entered"]

[connection signal="body_exited" from="ColliderR" to="." method="_on_ColliderR_body_exited"]

[connection signal="body_entered" from="ColliderL" to="." method="_on_ColliderL_body_entered"]

[connection signal="body_exited" from="ColliderL" to="." method="_on_ColliderL_body_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


